style.css
body {
    background-color: #FFFFFF;
    color: #222222;
}

a {
    color: #4682B4;
    text-decoration: none;
}

a:focus,
a:hover {
    color: #006400;
    text-decoration: none;
}

body,
td,
th {
    font-family: Source Sans Pro, Helvetica, sans-serif;
    line-height: 140%;
    font-size: 16px
}

strong {
    font-family: Source Sans Pro, Helvetica, sans-serif;
    font-size: 15px
}

heading {
    font-family: Source Sans Pro, Helvetica, sans-serif;
    font-size: 15px;
    font-weight: 700
}

ul {
    margin-top: 0;
}

img#headshot {
    width: 135px;
    border: 1px solid #222222;
}

li {
    color: black;
}

li span {
    color: black;
}

hr {
    border-color: #696969;
}

#icons a {
    color: #4682B4;
    margin-right: 12px;
    font-size: 26px;
}

#icons a:hover {
    color: #006400;
}

#logos {
    margin-top: 6px;
    line-height: 0;
}

#logos a {
    display: inline-block;
    margin-right: 12px;
    margin-bottom: 4px;
}

#logos img {
    height: 38px;
    width: auto;
    vertical-align: middle;
    transition: opacity 0.2s;
}

#logos a:hover img {
    opacity: 0.6;
}

div.pub {
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
    border: 0px;
    padding: 10px;
    font-size: 14px;
}

pre.bib {
    background-color: #eeeeee;
    padding: 10px;
    max-width: 650px;
    overflow: auto;
    line-height: normal;
}

@media (max-width: 700px) {
    table[width="950"] {
        width: 100% !important;
    }
    img#headshot {
        width: 110px;
    }
}

